<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="GVL_CONSTANT_SLOTS" Id="{ed0dc2e5-f3a9-47d9-b56a-2f34d7d7837c}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	scPlcEngaged : INT :=0;
	scAct : INT :=1;
	scIsValid : INT :=2;
	scSchedualed : INT :=3;
	//
	scDbEngaged : INT := 0;
	scDone : INT := 1;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>